Created structure for the page banner and started styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-
+    <header>
+      <div class="banner">
+        <h1 class="company-name">Company Name</h1>
+        <nav class="navigation">
+          <ul>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">FLIGHTS</a></li>
+            <li><a href="#">SUPPORT</a></li>
+            <li><a href="#">LOGIN</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    
+    <main>
+    </main>
   </body>
 </html>
