Added the main content and started refining the styling of the boxes adn buttons

--- a/index.html
+++ b/index.html
@@ -18,9 +18,34 @@
           </ul>
         </nav>
       </div>
+      <hr class="divider">
     </header>
-    
+
     <main>
+      <div class="boxes">
+        <div class="box">
+          <h2 class="box-header">Box 1</h2>
+          <p class="box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <a href="#" class="box-button">Button 1</a>
+        </div>
+        <div class="box">
+          <h2 class="box-header">Box 2</h2>
+          <p class="box-text">Praesent auctor sem id ullamcorper luctus.</p>
+          <a href="#" class="box-button">Button 2</a>
+        </div>
+        <div class="box">
+          <h2 class="box-header">Box 3</h2>
+          <p class="box-text">Integer eu tortor consectetur, tincidunt ligula ut, consequat lacus.</p>
+          <a href="#" class="box-button">Button 3</a>
+        </div>
+        <div class="box-wide">
+          <h2 class="box-header">Wide Box</h2>
+          <p class="box-text">Vestibulum a ligula a ante semper maximus a vitae nunc.</p>
+          <div class="wide-box-button">
+            <a href="#" class="box-button-wide">Wide Button</a>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
